# LearnStep

./: .env.example  .gitignore  AGENTS.md  CODEX_INSTRUCTIONS.md  Makefile  PRD.md  README.md  docker-compose.yml
artifacts/: README.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260713_0001_foundation.py  20260713_0002_controlled_demo.py
backend/src/classpath/: __init__.py  main.py
backend/src/classpath/api/: __init__.py  demo.py  dependencies.py  health.py
backend/src/classpath/core/: config.py
backend/src/classpath/db/: session.py
backend/src/classpath/fixtures/: __init__.py  demo_curriculum.json  demo_learning_packages.json
backend/src/classpath/models/: __init__.py  common.py  curriculum.py  demo.py  profile.py  user.py
backend/src/classpath/repositories/: __init__.py  demo.py
backend/src/classpath/schemas/: __init__.py  demo.py  health.py
backend/src/classpath/scripts/: seed_demo_curriculum.py
backend/src/classpath/services/: auth.py  demo_content.py  health.py  storage.py
backend/src/classpath/services/assessment/: __init__.py  evaluator.py
backend/src/classpath/services/nlp/: __init__.py  extraction.py
backend/src/classpath/services/retrieval/: __init__.py  hashing.py
backend/tests/: conftest.py
backend/tests/integration/: test_controlled_demo_journey.py  test_foundation_database.py
backend/tests/unit/: test_assessment.py  test_config.py  test_demo_fixture.py  test_extraction.py  test_health_api.py  test_model_metadata.py  test_storage.py
data/: DATASET_CARD.md  README.md  source_manifest.csv
docs/: api.md  architecture.md  child-safety-and-privacy.md  content-review.md  (+7 more)
(+46 files in other folders)
