[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "classpath-backend"
version = "0.1.0"
description = "Controlled synthetic portfolio demo for the LearnStep learning companion"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
dependencies = [
  "alembic>=1.14.1,<1.17",
  "argon2-cffi>=23.1,<26",
  "fastapi>=0.115.8,<0.118",
  "pgvector>=0.3.6,<0.5",
  "psycopg[binary]>=3.2.4,<3.3",
  "PyJWT>=2.10,<3",
  "PyMuPDF>=1.25,<1.27",
  "pydantic-settings>=2.7.1,<3",
  "python-multipart>=0.0.20,<0.1",
  "sqlalchemy>=2.0.37,<2.1",
  "uvicorn[standard]>=0.34.0,<0.36",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<0.29",
  "mypy>=1.14.1,<1.18",
  "pytest>=8.3.4,<9",
  "pytest-cov>=6.0.0,<7",
  "ruff>=0.9.4,<0.13",
]
ml = [
  "scikit-learn>=1.6,<1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/classpath"]

[tool.hatch.build]
include = ["src/classpath/**/*.py", "src/classpath/**/*.json"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
testpaths = ["tests"]
markers = ["integration: requires a migrated PostgreSQL database with pgvector"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["alembic.*", "fitz.*", "pgvector.*", "sklearn.*"]
ignore_missing_imports = true
